PRFL-315: fixed CSS that was breaking the gallery upload layout on IE8
git-svn-id: https://source.sakaiproject.org/svn/profile2/trunk@79004 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/profile2/tool/src/webapp/css/profile2.css
+++ b/profile2/tool/src/webapp/css/profile2.css
@@ -1245,9 +1245,8 @@ div.wicket-aa ul li.selected {
 }
 
 .wicket-mfu-container input {
-	margin-left: 5px;
+	margin-left: 10px;
 	font-size: 10px;
-	float: right;
 }
 
 /* tabs */  
